Update gepard: add graph grid

--- a/todo.txt
+++ b/todo.txt
@@ -14,3 +14,5 @@
 
 - *** GeoGebra Satan - 13 Ghosts music and video on bakcground xDDDD  - In Katakombi ***
 - *** Тем кто пропустил - в наказине там в катакомбах начинают)) :D :D :D  ***
+
+ - spacetime obiazatelno ) Minkowski-Einsten in world line
